--- a/ApiPeliculas/appsettings.json
+++ b/ApiPeliculas/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=localhost;Database=ApiPeliculas;User ID=admin;Password=admin;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultsSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
