--- a/ApiPeliculas/appsettings.json
+++ b/ApiPeliculas/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=localhost;Database=ApiPeliculas;User ID=admin;Password=admin;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultsSets=true;"
+    "SqlConnection": "Server=localhost;Database=ApiPeliculas;User ID=sa;Password=Admin123*;Trusted_Connection=true;TrustServerCertificate=false;"
   },
   "Logging": {
     "LogLevel": {
