fix connection string

--- a/ApiPeliculas/appsettings.json
+++ b/ApiPeliculas/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=localhost;Database=ApiPeliculas;User ID=sa;Password=Admin123*;Trusted_Connection=true;TrustServerCertificate=false;"
+    "SqlConnection": "Server=localhost;Database=ApiPeliculas;User ID=sa;Password=Admin123*;Trusted_Connection=false;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
