--- a/ApiPeliculas/appsettings.json
+++ b/ApiPeliculas/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ApiSettings" : { "Secret" : "ApiKey"},
   "ConnectionStrings": {
     "SqlConnection": "Server=localhost;Database=ApiPeliculas;User ID=sa;Password=Admin123*;Trusted_Connection=false;TrustServerCertificate=true;"
   },
